setting up the nav logo and other pages link

--- a/app/views/index/about_us.html
+++ b/app/views/index/about_us.html
@@ -1,5 +1,25 @@
+<head>
 
+	
+</head>
 
+<body>
 
+	<%=link_to 'main.htlm.erb', index_path do %>
+		<%=image_tag Solar-Gators-Logo.PNG title="Solar Gator Home Page"%>
+	<!--reference to each of the other pages-->
+	<%=link_to 'events', index_path do %>
+	<!--reference to each of the other pages-->
+	<%=%>
+	<!--reference to each of the other pages-->
+	<%=%>
 
 <p>this will be a page talking about our club and there will be a sub directory that will explain the systems and their roles </p>
+
+
+
+</body>
+
+
+
+
