Added a new title

--- a/app/views/index/about_us.html
+++ b/app/views/index/about_us.html
@@ -3,3 +3,4 @@
 
 
 <p>this will be a page talking about our club and there will be a sub directory that will explain the systems and their roles </p>
+<h1>This is Daniela's page</h1>
