Added  bulma css library and main rough index page

--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -1,1 +1,17 @@
-Index page of solar gators
+<div class="first-section" style='height: 800px;'>
+  <section class="hero is-fullheight">
+    <!-- Hero content: will be in the middle -->
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title has-text-white is-size-1">
+          Solar Gators
+        </h1>
+        <h2 class="subtitle has-text-white is-size-6">
+          University of Florida student organization driven by passionate engineers
+        </h2>
+      </div>
+    </div>
+
+    <!-- Hero footer: will stick at the bottom -->
+  </section>
+</div>
