--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -1,14 +1,34 @@
-<div class="first-section" style='height: 800px;'>
+<div class="first-section" style='height: 100vh;'>
   <section class="hero is-fullheight">
     <!-- Hero content: will be in the middle -->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title has-text-white is-size-1">
+        <h1 class="title has-text-white" style="font-size: 8em;">
           Solar Gators
         </h1>
         <h2 class="subtitle has-text-white is-size-6">
           University of Florida student organization driven by passionate engineers
         </h2>
+
+        <div class="columns">
+          <div class="column is-one-fifth">
+          </div>
+          <div class="column is-one-fifth">
+            <span class="button is-large is-success is-fullwidth">
+              <span class="icon">
+                <i class="fab fa-twitter"></i>
+              </span>
+              <span>Twitter</span>
+            </span>
+          </div>
+          <div class="column is-one-fifth">
+            <span class="button is-success is-fullwidth"><i class="fab fa-twitter"></i></span>
+          </div>
+          <div class="column is-one-fifth">
+            <span class="button is-success is-fullwidth"><i class="fab fa-twitter"></i></span>
+          </div>
+        </div>
+
       </div>
     </div>
 
