Changed the index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,8 @@
  *= require_self
  */
 
-@import "bulma";
+@import "semantic-ui";
+@import "semantic-ui/collections/menu";
 
 .first-section {
   background: linear-gradient(
