--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -1,37 +1,21 @@
-<div class="first-section" style='height: 100vh;'>
-  <section class="hero is-fullheight">
-    <!-- Hero content: will be in the middle -->
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <h1 class="title has-text-white" style="font-size: 8em;">
-          Solar Gators
-        </h1>
-        <h2 class="subtitle has-text-white is-size-6">
-          University of Florida student organization driven by passionate engineers
-        </h2>
 
-        <div class="columns">
-          <div class="column is-one-fifth">
-          </div>
-          <div class="column is-one-fifth">
-            <span class="button is-large is-success is-fullwidth">
-              <span class="icon">
-                <i class="fab fa-twitter"></i>
-              </span>
-              <span>Twitter</span>
-            </span>
-          </div>
-          <div class="column is-one-fifth">
-            <span class="button is-success is-fullwidth"><i class="fab fa-twitter"></i></span>
-          </div>
-          <div class="column is-one-fifth">
-            <span class="button is-success is-fullwidth"><i class="fab fa-twitter"></i></span>
-          </div>
-        </div>
+<div class="ui doubling stackable grid first-section" style='height: 100vh'>
+  <div class="ui row">
+  <div class="two wide column"></div>
+  <div class="twelve wide column">
+    <h1 class="ui left aligned header" style="margin-top: 25vh; font-size: 9em; color: white;">Solar Gators</h1>
+    <p class="ui left aligned header" style="font-weight: lighter; font-size: 1.2em; color: white">University of Florida student organization driven by passionate engineers</p>
+  </div>
+  </div>
+</div>
 
-      </div>
+<div class="ui doubling stackable grid" style='background-color: #f1f1ef; height: 50vh'>
+  <div class="ui row">
+  <div class="two wide column"></div>
+  <div class="twelve wide column">
+    <div class="ui raised segment">
+      <h1 class="ui center aligned header" style="margin-top: 5vh; font-size: 2.5em; color: #e0722f;">who are we</h1>
     </div>
-
-    <!-- Hero footer: will stick at the bottom -->
-  </section>
+  </div>
+  </div>
 </div>
