--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -7,7 +7,7 @@
           Solar Gators
         </h1>
         <h2 class="subtitle has-text-white is-size-6">
-          University of Florida student organization driven by passionate engineers
+          University of Florida student organization driven by passionate engineers. VIsit us
         </h2>
 
         <div class="columns">
