Several additions to the index page and added a footer

--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -3,19 +3,163 @@
   <div class="ui row">
   <div class="two wide column"></div>
   <div class="twelve wide column">
-    <h1 class="ui left aligned header" style="margin-top: 25vh; font-size: 9em; color: white;">Solar Gators</h1>
-    <p class="ui left aligned header" style="font-weight: lighter; font-size: 1.2em; color: white">University of Florida student organization driven by passionate engineers</p>
+    <h1 class="ui left aligned header" style="font-family: 'radnika'; margin-top: 25vh; font-size: 9em; color: white; opacity: 0.8">Solar Gators</h1>
+  </div>
+  </div>
+
+  <div class="ui row" style='margin-top:10vh;'>
+  <div class="two wide column" style='padding: 0 !important;'></div>
+  <div class="eight wide column" style='padding: 0 !important;'>
+    <hr />
+  </div>
+</div>
+
+<div class="ui row" style='margin-top:-13vh;'>
+  <div class="two wide column"></div>
+  <div class="ui row six wide">
+    <%= link_to 'about us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+    <%= link_to 'sponsors', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+    <%= link_to 'our team', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+    <%= link_to 'contact us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+  </div>
+</div>
+
+</div>
+
+<div class="ui grid">
+  <div class="ui row" style='margin-top: 10vh;'>
+  <div class="two wide column"></div>
+  <div class="twelve wide column">
+    <div class="ui grid">
+      <ui class="row">
+        <div class="ui four wide column"></div>
+        <div class="ui eight wide column">
+          <h1 class="ui dividing header" style='opacity: 0.8'>
+            BRINGING STUDENTS TOGETHER
+          </hq>
+        </div>
+      </ui>
+      <div class="ui row">
+        <div class="ui four wide column"></div>
+        <div class="ui eight wide column">Solar Gators is a University of Florida student organization driven by passionate engineers and designers determined to win the Formula Sun Grand Prix</div>
+      </div>
+    </div>
   </div>
   </div>
 </div>
 
-<div class="ui doubling stackable grid" style='background-color: #f1f1ef; height: 50vh'>
-  <div class="ui row">
+<div class="ui grid stackable" style="margin-top: 10vh; margin-bottom: 15vh;">
   <div class="two wide column"></div>
   <div class="twelve wide column">
-    <div class="ui raised segment">
-      <h1 class="ui center aligned header" style="margin-top: 5vh; font-size: 2.5em; color: #e0722f;">who are we</h1>
+    <div class="ui very padded segment piled">
+      <div class="ui grid">
+        <div class="four wide column">
+          <div class="ui icon header center aligned" style="opacity: 0.75;">
+            <i class="wrench icon"></i>
+              3 cars built
+          </div>
+        </div>
+        <div class="four wide column">
+          <div class="ui icon header center aligned" style="opacity: 0.75;">
+            <i class="trophy icon"></i>
+              20+ competitions attended
+          </div>
+        </div>
+        <div class="four wide column">
+          <div class="ui icon header center aligned" style="opacity: 0.75;">
+            <i class="users icon"></i>
+              10 sub-engineering teams
+          </div>
+        </div>
+        <div class="four wide column">
+          <div class="ui icon header center aligned" style="opacity: 0.75;">
+            <i class="certificate icon"></i>
+              15+ sponsors
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
+
+<div class="ui grid centered stackable" style="margin-top: 5vh;">
+  <div class="ui raised cards">
+    <div class="card">
+      <div class="ui slide masked reveal image">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+      </div>
+      <div class="content">
+        <div class="description">
+          Our organization goes way back. Learn more about our history.
+        </div>
+      </div>
+      <div class="ui bottom attached blue basic button">
+        <i class="info icon"></i>
+        About Us
+      </div>
+    </div>
+    <div class="card">
+      <div class="ui slide masked reveal image">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+      </div>
+      <div class="content">
+        <div class="description">
+          We have such a diverse group of members, ranging from all kinds of engineers.
+        </div>
+      </div>
+      <div class="ui bottom attached blue basic button">
+        <i class="info icon"></i>
+        The Team
+      </div>
+    </div>
+    <div class="card">
+      <div class="ui slide masked reveal image">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+      </div>
+      <div class="content">
+        <div class="description">
+          We have such a diverse group of members, ranging from all kinds of engineers.
+        </div>
+      </div>
+      <div class="ui bottom attached blue basic button">
+        <i class="info icon"></i>
+        The Team
+      </div>
+    </div>
+  </div>
+  <div class="ui raised cards">
+    <div class="card">
+      <div class="ui slide masked reveal image">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+      </div>
+      <div class="content">
+        <div class="description">
+          Our organization goes way back. Learn more about our history.
+        </div>
+      </div>
+      <div class="ui bottom attached blue basic button">
+        <i class="info icon"></i>
+        About Us
+      </div>
+    </div>
+    <div class="card">
+      <div class="ui slide masked reveal image">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
+        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+      </div>
+      <div class="content">
+        <div class="description">
+          We have such a diverse group of members, ranging from all kinds of engineers.
+        </div>
+      </div>
+      <div class="ui bottom attached blue basic button">
+        <i class="info icon"></i>
+        The Team
+      </div>
+    </div>
   </div>
 </div>
