Added images and more styling to the index page

--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -86,8 +86,8 @@
   <div class="ui raised cards">
     <div class="card">
       <div class="ui slide masked reveal image">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+        <%= image_tag 'about_us_1.JPG',  class: 'visible content' %>
+        <%= image_tag 'about_us_2.jpg',  class: 'hidden content' %>
       </div>
       <div class="content">
         <div class="description">
@@ -101,8 +101,8 @@
     </div>
     <div class="card">
       <div class="ui slide masked reveal image">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+        <%= image_tag 'team_1.JPG',  class: 'visible content' %>
+        <%= image_tag 'team_2.jpg',  class: 'hidden content' %>
       </div>
       <div class="content">
         <div class="description">
@@ -116,49 +116,49 @@
     </div>
     <div class="card">
       <div class="ui slide masked reveal image">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+        <%= image_tag 'event_1.jpg',  class: 'visible content' %>
+        <%= image_tag 'event_2.jpg',  class: 'hidden content' %>
       </div>
       <div class="content">
         <div class="description">
-          We have such a diverse group of members, ranging from all kinds of engineers.
+          Solar Gators provides many opportunities and activities. Find out when and where.
         </div>
       </div>
       <div class="ui bottom attached blue basic button">
         <i class="info icon"></i>
-        The Team
+        Events
       </div>
     </div>
   </div>
   <div class="ui raised cards">
     <div class="card">
       <div class="ui slide masked reveal image">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+        <%= image_tag 'contact_us_1.jpg',  class: 'visible content' %>
+        <%= image_tag 'contact_us_2.jpg',  class: 'hidden content' %>
       </div>
       <div class="content">
         <div class="description">
-          Our organization goes way back. Learn more about our history.
+          Shoot as an email with any inquiry or question you have about us.
         </div>
       </div>
       <div class="ui bottom attached blue basic button">
         <i class="info icon"></i>
-        About Us
+        Contact Us
       </div>
     </div>
     <div class="card">
       <div class="ui slide masked reveal image">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="visible content">
-        <img src="https://semantic-ui.com/images/avatar/large/elliot.jpg" class="hidden content">
+        <%= image_tag 'sponsors_1.jpg',  class: 'visible content' %>
+        <%= image_tag 'sponsors_2.jpg',  class: 'hidden content' %>
       </div>
       <div class="content">
         <div class="description">
-          We have such a diverse group of members, ranging from all kinds of engineers.
+          All of this is possible because of our sponsors. Check them out.
         </div>
       </div>
       <div class="ui bottom attached blue basic button">
         <i class="info icon"></i>
-        The Team
+        Sponsors
       </div>
     </div>
   </div>
