--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,14 @@
 @import "semantic-ui";
 @import "semantic-ui/collections/menu";
 
+@font-face {
+    font-family: 'radnika';
+    src: font-url('radnika-medium-webfont.woff2') format('woff2'),
+         font-url('radnika-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .first-section {
   background: linear-gradient(
       rgba(0, 0, 0, 0.3),
