Added resizing of the sponsors logo in the footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -38,6 +38,6 @@
       <i class="certificate icon"></i>
       Our Sponsors
     </h4>
-    <%= image_tag 'sponsors.png' %>
+    <%= image_tag 'sponsors.png', style: 'width: 100%' %>
   </div>
 </div>
