--- a/app/views/index/sponsors.html.erb
+++ b/app/views/index/sponsors.html.erb
@@ -1,1 +1,42 @@
-<p> this will be a plage dedicated to the sponsors</p>
+<div class="sponsor-container">
+  <%= image_tag 'sponsor_banner', style: 'width: 100%; opacity: 1' %>
+  <h1 class="sponsor-centered">Sponsors</h1>
+</div>
+
+
+<div class="ui grid">
+  <div class="ui row" style='margin-top: 5vh;'>
+  <div class="two wide column"></div>
+  <div class="twelve wide column">
+    <div class="ui grid">
+      <ui class="row">
+        <div class="ui four wide column"></div>
+        <div class="ui eight wide column">
+          <h1 class="ui dividing header" style='opacity: 0.8'>
+            OUR SPONSORS
+          </hq>
+        </div>
+      </ui>
+      <div class="ui row">
+        <div class="ui four wide column"></div>
+        <div class="ui eight wide column">Building, designing, prototyping, and organizing the build of a solar-powered vehicle is a very resource-intensive feat. All of this is possible due to the generosity and support of our beloved sponsors.</div>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+
+<div class="ui grid">
+  <div class="ui row centered">
+    <div class="ui animated basic blue circular massive button" tabindex="0">
+      <div class="visible content">Sponsorship Opportunities</div>
+      <div class="hidden content">
+        <i class="right arrow icon"></i>
+      </div>
+    </div>
+  </div>
+  <div class="ui row centered">
+    <div class="sixteen wide column"><div class="ui fluid divider"></div></div>
+
+  </div>
+</div>
