--- a/app/views/index/main.html.erb
+++ b/app/views/index/main.html.erb
@@ -1,5 +1,4 @@
-
-<div class="ui doubling stackable grid first-section" style='height: 100vh'>
+<div class="ui doubling stackable grid first-section" style='height: 100vh; margin: 0;'>
   <div class="ui row">
   <div class="two wide column"></div>
   <div class="twelve wide column">
@@ -8,21 +7,21 @@
   </div>
 
   <div class="ui row" style='margin-top:10vh;'>
-  <div class="two wide column" style='padding: 0 !important;'></div>
-  <div class="eight wide column" style='padding: 0 !important;'>
-    <hr />
+    <div class="two wide column" style='padding: 0 !important;'></div>
+    <div class="eight wide column" style='padding: 0 !important;'>
+      <hr />
+    </div>
   </div>
-</div>
 
-<div class="ui row" style='margin-top:-13vh;'>
-  <div class="two wide column"></div>
-  <div class="ui row six wide">
-    <%= link_to 'about us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
-    <%= link_to 'sponsors', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
-    <%= link_to 'our team', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
-    <%= link_to 'contact us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+  <div class="ui row" style='margin-top:-13vh;'>
+    <div class="two wide column"></div>
+    <div class="ui row six wide">
+      <%= link_to 'about us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+      <%= link_to 'sponsors', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+      <%= link_to 'our team', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+      <%= link_to 'contact us', root_path, class: 'ui small inverted button', style: 'font-family: "radnika"; color: white;' %>
+    </div>
   </div>
-</div>
 
 </div>
 
