--- a/app/views/index/sponsors.html.erb
+++ b/app/views/index/sponsors.html.erb
@@ -36,7 +36,7 @@
     </div>
   </div>
   <div class="ui row centered">
-    <div class="sixteen wide column"><div class="ui fluid divider"></div></div>
+    <div class="fourteen wide column"><div class="ui fluid divider"></div></div>
 
   </div>
 </div>
