--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,22 +15,28 @@
       </div>
       <div class="ui row">
         <div class="six wide column">
-          <button class="ui big circular facebook icon button">
-            <i class="facebook icon"></i>
-          </button>
-          <button class="ui big circular twitter icon button">
-            <i class="twitter icon"></i>
-          </button>
-          <button class="ui big circular instagram icon button">
-            <i class="instagram icon"></i>
-          </button>
+          <a href="https://www.facebook.com/UFSolarGators/">
+            <button class="ui big circular facebook icon button">
+              <i class="facebook icon"></i>
+            </button>
+          </a>
+          <a href="https://twitter.com/solargators?lang=en">
+            <button class="ui big circular twitter icon button">
+              <i class="twitter icon"></i>
+            </button>
+          </a>
+          <a href="https://www.facebook.com/UFSolarGators/">
+            <button class="ui big circular instagram icon button">
+              <i class="instagram icon"></i>
+            </button>
+          </a>
         </div>
         <div class="two wide column"></div>
         <div class="four wide column" style='margin-top: -3vh;'>
           <h5 class="ui header left" style='color:white; opacity: 0.8'>Contact us<br />Join us</h5>
         </div>
         <div class="four wide column" style='margin-top: -3vh;'>
-          <h5 class="ui header left" style='color:white; opacity: 0.8'>Donate<br />Sponsor us</h5>
+          <h5 class="ui header left" style='color:white; opacity: 0.8'>Donate<br /> <%= link_to 'Sponsor Us', sponsors_path, style: 'color:white' %></h5>
         </div>
       </div>
     </div>
