Rought draft of the sponsors page

--- a/app/views/index/sponsors.html.erb
+++ b/app/views/index/sponsors.html.erb
@@ -28,15 +28,155 @@
 
 <div class="ui grid">
   <div class="ui row centered">
-    <div class="ui animated basic blue circular massive button" tabindex="0">
-      <div class="visible content">Sponsorship Opportunities</div>
-      <div class="hidden content">
-        <i class="right arrow icon"></i>
+    <a href="https://www.ufsolargators.org/sponsorship-opportunities/" class="">
+      <div class="ui animated basic blue circular massive button" tabindex="0">
+        <div class="visible content">Sponsorship Opportunities</div>
+        <div class="hidden content">
+          <i class="right arrow icon"></i>
+        </div>
+      </div>
+    </a>
+  </div>
+  <div class="ui row centered" style='margin-top: 5vh;'>
+    <div class="fourteen wide column">
+      <div class="ui horizontal divider header dash_header">
+        <i class="gift icon"></i>
+          Platnium Sponsors
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'premium_solidworks', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_eaton', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_altair', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'premium_ece', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_hwco', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_siemens', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'premium_solar_impact', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_sunpower', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_ufmae', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+        </div>
+        <div class="ui column">
+          <%= image_tag 'premium_universal', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+        </div>
       </div>
     </div>
   </div>
   <div class="ui row centered">
     <div class="fourteen wide column"><div class="ui fluid divider"></div></div>
-
   </div>
+
+  <div class="ui row centered" style='margin-top: 5vh;'>
+    <div class="fourteen wide column">
+      <div class="ui horizontal divider header dash_header">
+        <i class="gift icon"></i>
+          Silver Sponsors
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'silver_bac', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'silver_ufippd', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'silver_rohacell', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'silver_mirage', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'silver_fgci', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'silver_brembo', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'silver_ufsg', style: 'width: 80%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'silver_accurate', style: 'width: 100%;' %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="ui row centered">
+    <div class="fourteen wide column"><div class="ui fluid divider"></div></div>
+  </div>
+
+  <div class="ui row centered" style='margin-top: 5vh;'>
+    <div class="fourteen wide column">
+      <div class="ui horizontal divider header dash_header">
+        <i class="gift icon"></i>
+          Bronze Sponsors
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'bronze_tdk', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'bronze_zevia', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'bronze_stickermule', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'bronze_solarcat', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'bronze_kevins', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'bronze_hakko', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+      <div class="ui middle aligned three column divided grid" style='margin-top: 1vh;'>
+        <div class="ui column">
+          <%= image_tag 'bronze_moss', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'bronze_bmrs', style: 'width: 100%;' %>
+        </div>
+        <div class="ui column">
+          <%= image_tag 'bronze_beadbuster', style: 'width: 100%; height: 20vh;' %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="ui row centered">
+    <div class="fourteen wide column"><div class="ui fluid divider"></div></div>
+  </div>
+
+
 </div>
